--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -160,14 +160,14 @@ jobs:
           VERSION=$(cat kubemarine/version)
           if [[ $VERSION != "${{ github.ref_name }}" ]]; then
             echo -e "\033[91mGit tag does not equal to kubemarine/version\033[0m"
-            exit 1;
+            exit 1
           fi
-          BRANCH_OWNERS=$(git branch -r --contains HEAD | sed 's/^[[:space:]]*origin\/\(.*\)$/\1/' | grep "^\(main\|.*_branch\)$")
+          BRANCH_OWNERS=$(git branch -r --contains HEAD | sed 's/^[[:space:]]*origin\/\(.*\)$/\1/' | grep "^\(main\|.*_branch\)$" || true)
           if [[ -z "$BRANCH_OWNERS" || $(echo "$BRANCH_OWNERS" | wc -l) != 1 ]]; then
-            echo -e "\033[91mFailed to detect the only release branch containing the HEAD commit.\033[0m";
+            echo -e "\033[91mFailed to detect the only release branch containing the HEAD commit.\033[0m"
             echo "Available branches:"
             git branch -r --contains HEAD
-            exit 1;
+            exit 1
           fi
           echo -e "\033[0;32mTarget commitish: ${BRANCH_OWNERS}\033[0m"
           echo "target_commitish=$BRANCH_OWNERS" >> $GITHUB_OUTPUT
