adjust plugins and nodes timeouts

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -417,9 +417,12 @@ plugins:
             deployments:
               - calico-kube-controllers
             pods:
-              - coredns
-              - calico-kube-controllers
-              - calico-node
+              list:
+                - coredns
+                - calico-kube-controllers
+                - calico-node
+              timeout: 5
+              retries: 150
         - thirdparty: /usr/bin/calicoctl
         - shell:
             command: mkdir -p /etc/calico
