--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -44,6 +44,10 @@ etcd:
 kubernetes:
   temporary_exceptions:
     - has prevented the request from succeeding
+deployments:
+  expect:
+    timeout: 5
+    retries: 30
 pods:
   allowed_failures: 10
   expect:
