--- a/kubemarine/plugins/yaml/nginx-ingress-controller-v1.4.0-original.yaml
+++ b/kubemarine/plugins/yaml/nginx-ingress-controller-v1.4.0-original.yaml
@@ -1,3 +1,5 @@
+# Source: https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.4.0/deploy/static/provider/cloud/deploy.yaml
+---
 apiVersion: v1
 kind: Namespace
 metadata:
