--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,13 +30,14 @@ dependencies = [
     "deepmerge==1.0.*",
     "fabric==2.6.*",
     "jinja2==3.1.*",
-    "MarkupSafe==2.0.*",
+    "MarkupSafe==2.1.*",
     "invoke==1.6.*",
     "ruamel.yaml==0.17.*",
     "pygelf==0.4.*",
     "toml==0.10.*",
     "python-dateutil==2.8.*",
-    "deepdiff==5.7.*",
+    "deepdiff==6.2.*",
+    "ordered-set==4.1.*",
     # cryptography is a transitive dependency of paramiko. Fix version to avoid unexpected deprecation warnings.
     "cryptography==39.0.*",
     "paramiko==2.11.*",
