--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -485,12 +485,18 @@ compatibility_map:
         sha1: 90386507b3214adb6b2d4ed05a07e80f11f674d6
       v1.23.11:
         sha1: b93ff384df125429dcbeb18c2ea648168ae10c56
+      v1.23.17:
+        sha1: a60b0adcdc6f19e79bd98663914b694a325db819
       v1.24.0:
         sha1: a60b0adcdc6f19e79bd98663914b694a325db819
       v1.24.2:
         sha1: 65c3e96dc54e7f703bf1ea9c6e5573dca067f726
+      v1.24.11
+        sha1: a60b0adcdc6f19e79bd98663914b694a325db819
       v1.25.2:
         sha1: 72b87eedc9701c1143126f4aa7375b91fc9d46fc
+      v1.25.7:
+        sha1: a60b0adcdc6f19e79bd98663914b694a325db819
     kubelet:
       v1.21.2:
         sha1: 024e458aa0f74cba6b773401b779590437812fc6
@@ -508,12 +514,18 @@ compatibility_map:
         sha1: 326110dcb62b66e69490d039b170682fb71c5560
       v1.23.11:
         sha1: 07769c846e4a83d59f9f34370c33be5cc163120b
+      v1.23.17:
+        sha1: ce74875b3802f4a9ac5dbd32a3f4c684b9ee4fd3
       v1.24.0:
         sha1: ce74875b3802f4a9ac5dbd32a3f4c684b9ee4fd3
       v1.24.2:
         sha1: 35c3d20f92c8159b4f65aaafe6e9fc57c9f9e308
+      v1.24.11:
+        sha1: ce74875b3802f4a9ac5dbd32a3f4c684b9ee4fd3
       v1.25.2:
         sha1: afdc009cd59759626ecce007667f42bf42e7c1be 
+      v1.25.7:
+        sha1: ce74875b3802f4a9ac5dbd32a3f4c684b9ee4fd3 
     kubectl:
       v1.21.2:
         sha1: 2c7a7de9fff41ac49f7c2546a9b1aff2c1d9c468
@@ -531,12 +543,18 @@ compatibility_map:
         sha1: 65a24196b4cc9a3d2eafbd254b9d2d4add8ba152
       v1.23.11:
         sha1: 81643da0b975102cede136d39767cdc54f2b0aef
+      v1.23.17:
+        sha1: 5fdcf3741992427698444a75a7f27a6d6c4a22ab
       v1.24.0:
         sha1: 5fdcf3741992427698444a75a7f27a6d6c4a22ab
       v1.24.2:
         sha1: d2a8e78bcdc992addd6faccb27b0af5d533443fa
+      v1.24.11:
+        sha1: 5fdcf3741992427698444a75a7f27a6d6c4a22ab
       v1.25.2:
         sha1: b12c0e102df89cd0579c8a3c769988aaf5dbe4ba
+      v1.25.7:
+        sha1: 5fdcf3741992427698444a75a7f27a6d6c4a22ab
     calico:
       v1.21:
         version: v3.22.2
