--- a/kubemarine/plugins/yaml/dashboard-v2.5.1-original.yaml
+++ b/kubemarine/plugins/yaml/dashboard-v2.5.1-original.yaml
@@ -1,3 +1,5 @@
+# Source: https://raw.githubusercontent.com/kubernetes/dashboard/v2.5.1/aio/deploy/recommended.yaml
+---
 # Copyright 2017 The Kubernetes Authors.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
