--- a/kubemarine/plugins/yaml/local-path-provisioner-v0.0.22-original.yaml
+++ b/kubemarine/plugins/yaml/local-path-provisioner-v0.0.22-original.yaml
@@ -1,3 +1,5 @@
+# Source: https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.22/deploy/local-path-storage.yaml
+---
 apiVersion: v1
 kind: Namespace
 metadata:
