--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,11 +42,21 @@ dependencies = [
     "cryptography==39.0.*",
     "paramiko==2.11.*",
     "jsonschema==4.17.*",
+    "typing_extensions==4.6.*",
 ]
 requires-python = ">=3.7"
 
 [project.optional-dependencies]
 ansible = ["ansible==7.0.*"]
+mypy = [
+    "mypy==1.3.*",
+    "types-PyYAML==6.*",
+    "types-invoke==1.*",
+    "types-toml==0.*",
+    "types-python-dateutil==2.*",
+    "types-paramiko==2.*",
+    "types-jsonschema==4.*",
+]
 
 # Auxiliary executable roughly equivalent to python -m kubemarine
 # Allows to not worry about exact path to python executable on the client machine
@@ -78,3 +88,98 @@ push = true
 "kubemarine/version" = [
     '^{version}$'
 ]
+
+[tool.mypy]
+files = ["kubemarine", "scripts"]
+
+# various configuration and code checks
+warn_unused_configs = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_unreachable = true
+
+# strict typing checks
+check_untyped_defs = true
+strict_equality = true
+strict_concatenate = true
+disallow_subclassing_any = true
+disallow_untyped_decorators = true
+
+# permissive configuration
+implicit_optional = true
+
+# https://github.com/python/mypy/issues/12664
+incremental = false
+
+# List of all modules where type annotations are maintained with references (but still with any-generics) to avoid degradation.
+[[tool.mypy.overrides]]
+module = [
+    # modules from scripts/
+    "build_binary",
+    "install_package",
+    "src.*",
+    "sync",
+    # kubemarine modules
+    "kubemarine",
+    "kubemarine.apparmor",
+    "kubemarine.apt",
+    "kubemarine.audit",
+    "kubemarine.controlplane",
+    "kubemarine.core",
+    "kubemarine.core.action",
+    "kubemarine.core.annotations",
+    "kubemarine.core.connections",
+    "kubemarine.core.environment",
+    "kubemarine.core.errors",
+    "kubemarine.core.executor",
+    "kubemarine.core.group",
+    "kubemarine.core.os",
+    "kubemarine.core.patch",
+    "kubemarine.core.schema",
+    "kubemarine.core.static",
+    "kubemarine.core.summary",
+    "kubemarine.core.yaml_merger",
+    "kubemarine.cri.*",
+    "kubemarine.etcd",
+    "kubemarine.haproxy",
+    "kubemarine.jinja",
+    "kubemarine.k8s_certs",
+    "kubemarine.keepalived",
+    "kubemarine.kubernetes.daemonset",
+    "kubemarine.kubernetes.deployment",
+    "kubemarine.kubernetes.replicaset",
+    "kubemarine.kubernetes.statefulset",
+    "kubemarine.kubernetes_accounts",
+    "kubemarine.plugins.builtin",
+    "kubemarine.plugins.calico",
+    "kubemarine.plugins.kubernetes_dashboard",
+    "kubemarine.plugins.local_path_provisioner",
+    "kubemarine.plugins.manifest",
+    "kubemarine.plugins.nginx_ingress",
+    "kubemarine.procedures.cert_renew",
+    "kubemarine.procedures.do",
+    "kubemarine.procedures.manage_psp",
+    "kubemarine.procedures.manage_pss",
+    "kubemarine.procedures.migrate_kubemarine",
+    "kubemarine.procedures.reboot",
+    "kubemarine.packages",
+    "kubemarine.selinux",
+    "kubemarine.sysctl",
+    "kubemarine.system",
+    "kubemarine.thirdparties",
+    "kubemarine.yum",
+]
+disallow_incomplete_defs = true
+disallow_untyped_defs = true
+disallow_untyped_calls = true
+warn_return_any = true
+
+# List of all modules where type annotations are self maintained to avoid degradation.
+[[tool.mypy.overrides]]
+module = [
+    "kubemarine.core.cluster",
+    "kubemarine.core.resources",
+    "kubemarine.kubernetes.object",
+]
+disallow_incomplete_defs = true
+disallow_untyped_defs = true
