--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,8 @@ dependencies = [
     "cryptography==39.0.*",
     "paramiko==2.11.*",
     "jsonschema==4.17.*",
-    "typing_extensions==4.6.*",
+    "typing_extensions==4.7.*",
+    "useful-types==0.1.*"
 ]
 requires-python = ">=3.7"
 
@@ -125,20 +126,7 @@ module = [
     "kubemarine.apt",
     "kubemarine.audit",
     "kubemarine.controlplane",
-    "kubemarine.core",
-    "kubemarine.core.action",
-    "kubemarine.core.annotations",
-    "kubemarine.core.connections",
-    "kubemarine.core.environment",
-    "kubemarine.core.errors",
-    "kubemarine.core.executor",
-    "kubemarine.core.group",
-    "kubemarine.core.os",
-    "kubemarine.core.patch",
-    "kubemarine.core.schema",
-    "kubemarine.core.static",
-    "kubemarine.core.summary",
-    "kubemarine.core.yaml_merger",
+    "kubemarine.core.*",
     "kubemarine.cri.*",
     "kubemarine.etcd",
     "kubemarine.haproxy",
@@ -177,8 +165,6 @@ warn_return_any = true
 # List of all modules where type annotations are self maintained to avoid degradation.
 [[tool.mypy.overrides]]
 module = [
-    "kubemarine.core.cluster",
-    "kubemarine.core.resources",
     "kubemarine.kubernetes.object",
 ]
 disallow_incomplete_defs = true
