--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,38 +122,44 @@ module = [
     "sync",
     # kubemarine modules
     "kubemarine",
+    "kubemarine.__main__",
+    "kubemarine.admission",
     "kubemarine.apparmor",
     "kubemarine.apt",
     "kubemarine.audit",
     "kubemarine.controlplane",
     "kubemarine.core.*",
+    "kubemarine.coredns",
     "kubemarine.cri.*",
+    "kubemarine.demo",
     "kubemarine.etcd",
     "kubemarine.haproxy",
     "kubemarine.jinja",
     "kubemarine.k8s_certs",
     "kubemarine.keepalived",
-    "kubemarine.kubernetes.daemonset",
-    "kubemarine.kubernetes.deployment",
-    "kubemarine.kubernetes.replicaset",
-    "kubemarine.kubernetes.statefulset",
+    "kubemarine.kubernetes.*",
     "kubemarine.kubernetes_accounts",
-    "kubemarine.plugins.builtin",
-    "kubemarine.plugins.calico",
-    "kubemarine.plugins.kubernetes_dashboard",
-    "kubemarine.plugins.local_path_provisioner",
-    "kubemarine.plugins.manifest",
-    "kubemarine.plugins.nginx_ingress",
+    "kubemarine.plugins.*",
+    "kubemarine.procedures.add_node",
+    "kubemarine.procedures.backup",
     "kubemarine.procedures.cert_renew",
+    "kubemarine.procedures.check_iaas",
+    "kubemarine.procedures.check_paas",
     "kubemarine.procedures.do",
+    "kubemarine.procedures.install",
     "kubemarine.procedures.manage_psp",
     "kubemarine.procedures.manage_pss",
+    "kubemarine.procedures.migrate_cri",
     "kubemarine.procedures.migrate_kubemarine",
     "kubemarine.procedures.reboot",
+    "kubemarine.procedures.remove_node",
+    "kubemarine.procedures.restore",
+    "kubemarine.procedures.upgrade",
     "kubemarine.packages",
     "kubemarine.selinux",
     "kubemarine.sysctl",
     "kubemarine.system",
+    "kubemarine.testsuite",
     "kubemarine.thirdparties",
     "kubemarine.yum",
 ]
@@ -161,11 +167,3 @@ disallow_incomplete_defs = true
 disallow_untyped_defs = true
 disallow_untyped_calls = true
 warn_return_any = true
-
-# List of all modules where type annotations are self maintained to avoid degradation.
-[[tool.mypy.overrides]]
-module = [
-    "kubemarine.kubernetes.object",
-]
-disallow_incomplete_defs = true
-disallow_untyped_defs = true
