--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -348,6 +348,8 @@ services:
 
   loadbalancer:
     haproxy:
+      global:
+        maxconn: '10000'
       defaults:
         timeout_connect: '10s'
         timeout_client: '1m'
