--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -349,7 +349,7 @@ services:
   loadbalancer:
     haproxy:
       global:
-        maxconn: '10000'
+        maxconn: 10000
       defaults:
         timeout_connect: '10s'
         timeout_client: '1m'
