--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -8,8 +8,16 @@
 # The order of upgrade of defined by the implementation.
 
 thirdparties:
-  calicoctl: []
-  crictl: []
+  calicoctl:
+  - v1.25.7
+  - v1.26.3
+  - v1.26.4
+  - v1.27.1
+  crictl:
+  - v1.25.7
+  - v1.26.3
+  - v1.26.4
+  - v1.27.1
 packages:
   docker:
     version_rhel: []
@@ -34,7 +42,17 @@ packages:
     version_rhel8: false
     version_debian: false
 plugins:
-  calico: []
-  nginx-ingress-controller: []
+  calico:
+  - v1.25.7
+  - v1.26.3
+  - v1.26.4
+  - v1.27.1
+  nginx-ingress-controller:
+  - v1.25.7
+  - v1.26.3
+  - v1.26.4
+  - v1.27.1
   kubernetes-dashboard: []
-  local-path-provisioner: []
+  local-path-provisioner:
+  - v1.25.7
+  - v1.26.3
