--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -41,7 +41,7 @@ services:
     ignorePreflightErrors: Port-6443,CoreDNSUnsupportedPlugins
   kubeadm:
     # for patches functionality we need v1beta3 which is available since k8s v1.22 only
-    apiVersion: '{% if "v1.21" in services["kubeadm"]["kubernetesVersion"] %}kubeadm.k8s.io/v1beta2{% else %}kubeadm.k8s.io/v1beta3{% endif %}'
+    apiVersion: 'kubeadm.k8s.io/v1beta3'
     kind: ClusterConfiguration
     kubernetesVersion: v1.26.3
     controlPlaneEndpoint: '{{ cluster_name }}:6443'
