disable proxy protocol in integration tests

--- a/ci/extended_cluster.yaml
+++ b/ci/extended_cluster.yaml
@@ -30,6 +30,8 @@ plugins:
     install: true
   nginx-ingress-controller:
     install: true
+    config_map:
+      use-proxy-protocol: "false"
     controller:
       nodeSelector:
         test-label: label
