--- a/.github/workflows/transfer_repo_image.yaml
+++ b/.github/workflows/transfer_repo_image.yaml
@@ -1,10 +1,7 @@
 name: Build transfer image
 on:
   schedule:
-    - cron: '0 0,16 * * 1-5' # Runs at 00:00 and 16:00, Monday through Friday
-  push:
-    branches:
-      - '**'
+    - cron: '0 0 * * 5' # Runs at 00:00 every Friday
   workflow_dispatch:
     inputs:
       publish:
@@ -25,7 +22,7 @@ jobs:
       - name: Build Docker Image for kubemarine-transfer
         run: docker build -t kubemarine-transfer -f ci/Dockerfile-transfer --no-cache .
       - name: Publish to ghcr.io
-        if: github.ref_name == 'autosync' || inputs.publish
+        if: github.ref_name == 'main' || inputs.publish
         run: |
           GHCRIO_TAG=$(echo "${{ github.ref_name }}" | sed 's/\//_/g')
           GHCRIO_IMAGE=ghcr.io/netcracker/kubemarine-transfer:$GHCRIO_TAG
