--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -495,11 +495,10 @@ services:
     package_manager:
       replace-repositories: false
     # Associations for each OS family are merged with 'package.common_associations' section of globals.yaml.
-    # Packages for docker, containerd, haproxy, and keepalived are calculated based on
+    # Packages for containerd, haproxy, and keepalived are calculated based on
     # 'package.<OS family>' sections of globals.yaml, target Kubernetes version, and the compatibility map.
     associations:
       debian:
-        docker: {}
         containerd: {}
         haproxy:
           executable_name: 'haproxy'
@@ -510,7 +509,6 @@ services:
         conntrack:
           package_name: 'conntrack'
       rhel:
-        docker: {}
         containerd: {}
         haproxy:
           executable_name: '/opt/rh/rh-haproxy18/root/usr/sbin/haproxy'
@@ -523,7 +521,6 @@ services:
         semanage:
           package_name: 'policycoreutils-python'
       rhel8:
-        docker: {}
         containerd: {}
         haproxy:
           executable_name: '/usr/sbin/haproxy'
@@ -536,7 +533,6 @@ services:
         semanage:
           package_name: 'policycoreutils-python-utils'
       rhel9:
-        docker: {}
         containerd: {}
         haproxy:
           executable_name: '/usr/sbin/haproxy'
