--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,6 +89,20 @@ jobs:
           path: ${{ matrix.executable_path }}
           retention-days: 1
 
+  test-binary:
+    # Currently macos-latest is macos-14-arm64, and thus binary build for macos11-arm64 can be tested on it.
+    runs-on: macos-latest
+    needs: build-binary
+    steps:
+      - name: Download Executable
+        uses: actions/download-artifact@v3
+        with:
+          name: kubemarine-macos11-arm64
+      - name: Run Selftest
+        run: |
+          chmod +x kubemarine
+          ./kubemarine selftest
+
   test-package:
     runs-on: ${{ matrix.os }}
     needs: build-package
@@ -184,7 +198,7 @@ jobs:
 
   upload-binary:
     runs-on: ubuntu-latest
-    needs: [ build-binary, create-release ]
+    needs: [ build-binary, test-binary, create-release ]
     if: startsWith(github.ref, 'refs/tags')
     strategy:
       matrix:
